[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/world/objects/UnitEgg.png" type="Texture" id=1]
[ext_resource path="res://assets/units/emBot.png" type="Texture" id=2]
[ext_resource path="res://src/objects/UnitEgg.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/SelectAtlas.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/AttackUI.tres" type="Texture" id=5]
[ext_resource path="res://assets/ui/LifeUI.tres" type="Texture" id=6]
[ext_resource path="res://assets/UITheme.tres" type="Theme" id=7]
[ext_resource path="res://assets/fonts/UnitEggFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/ui/EnergyLevel/EnergyLevel.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/UISprites.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="UnitEgg" type="Area2D"]
position = Vector2( -2, 0 )
script = ExtResource( 3 )

[node name="InfoPanel" type="Panel" parent="."]
visible = false
margin_left = -126.0
margin_top = -13.0
margin_right = -60.0
margin_bottom = 3.0
rect_scale = Vector2( 1.4, 1.4 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel/VBoxContainer"]
visible = false
margin_right = 78.0
margin_bottom = 16.0
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="InfoPanel/VBoxContainer/MarginContainer"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 76.0
margin_bottom = 14.0
theme = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
text = "+ Reflective"

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer"]
margin_right = 66.0
margin_bottom = 16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="MarginContainer" parent="InfoPanel/VBoxContainer/HBoxContainer"]
margin_right = 31.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer/HBoxContainer/Life"]
margin_right = 31.0
margin_bottom = 16.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="InfoPanel/VBoxContainer/HBoxContainer/Life/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 6 )

[node name="LifeUI" type="Label" parent="InfoPanel/VBoxContainer/HBoxContainer/Life/HBoxContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 30.0
margin_bottom = 15.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
text = "10"

[node name="Attack" type="MarginContainer" parent="InfoPanel/VBoxContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 66.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer/HBoxContainer/Attack"]
margin_right = 31.0
margin_bottom = 16.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="InfoPanel/VBoxContainer/HBoxContainer/Attack/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="AttackUI" type="Label" parent="InfoPanel/VBoxContainer/HBoxContainer/Attack/HBoxContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 30.0
margin_bottom = 15.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
text = "10"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="UnitSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="SelectSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="CostSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 18, -24 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Lock" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -22, -24 )
scale = Vector2( 1.96, 1.96 )
frames = SubResource( 11 )

[connection signal="input_event" from="." to="." method="_on_UnitEgg_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_UnitEgg_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UnitEgg_mouse_exited"]
